# simiamsVSmaawox

./: .gitignore  CMakeLists.txt  INVASIONdeSIMIAMS  a.out  main.cpp
defines/: defines.cpp
defines/champions/: .knight.txt.swp  knight.txt  warrior.txt
include/: Champion.h  Enemy.h  Game.h  Player.h  Spell.h  defines.h  header.h
scripts/: bcBlack.sh  bcRed.sh  init.sh  reset.sh  script.sh
src/: Champion.cpp  Enemy.cpp  Game.cpp  Player.cpp  Spell.cpp  utils.cpp
